components/clientComponents/globals/Header/PublishButton.css
.publish-menu-trigger {
  anchor-name: --form-builder-publish-menu-trigger;
}

.publish-menu-popover {
  position-anchor: --form-builder-publish-menu-trigger;
  position-area: bottom span-right;
  position-try:
    flip-block,
    flip-inline,
    flip-block flip-inline;

  inset: auto;
  margin: 0.875rem 0 0;
  opacity: 0;
  display: none;
  transition-property: opacity, display, translate;
  transition-duration: 180ms;
  transition-behavior: allow-discrete;
  translate: 0 0.5rem;
}

.publish-menu-popover:popover-open {
  opacity: 1;
  display: block;
  translate: 0 0;
}

